--- a/CSS/dashboardstyles.css
+++ b/CSS/dashboardstyles.css
@@ -9,7 +9,7 @@ body{
 }
 
 .leftBar23{
-    height: 1000px;
+    height: 10000px;
     width: 300px;
     background-color: rgb(255, 255, 255);
     margin-top: -50px;
@@ -19,15 +19,14 @@ body{
 }
 
 .center{
-    height: 2000px;
+    height: 100%;
     width: 1435px;
-    background-color: rgba(255, 255, 255, 0);
     margin-top: -60px;
     background-color: rgb(236, 234, 230);
 }
 
 .rightBar23 {
-    height: 1000px;
+    height: 10000px;
     width: 420px;
     background-color: rgb(255, 255, 255);
     margin-top: -50px;
