--- a/views/layouts/dashboard.html
+++ b/views/layouts/dashboard.html
@@ -173,9 +173,7 @@
 
             
 
-            $(function() {
-                $("#centerContentTabs").tabs();
-            });
+        
 
 
 
@@ -191,23 +189,23 @@
                     </h1>
 
                     <ul class="screensList">
-                        <li class="options" onclick="loadDashboard()">
-                            Dashboard
-                        </li>
-                        <li class="options" onclick="loadHackathons()">
-                            <a href="#centerContent-2">Hackathons</a>
+                        <li class="options">
+                            <a href="./dashboard.html">Dashboard</a>
                         </li>
                         <li class="options">
-                            My Hackathons
+                            <a href="./hackathonsContent.html">Hackathons</a>
                         </li>
                         <li class="options">
-                            Join Hackathon
+                            <a href="./myHackathonsContent.html">My Hackathons</a>
                         </li>
                         <li class="options">
-                            Settings
+                            <a href="./joinHackathon.html">Join Hackathon</a>
                         </li>
                         <li class="options">
-                            Contact Support
+                            <a href="settings.html">Settings</a>
+                        </li>
+                        <li class="options">
+                            <a href="./contact.html">Contact Support</a>
                         </li>
 
 
