--- a/CSS/dashboardstyles.css
+++ b/CSS/dashboardstyles.css
@@ -1,7 +1,17 @@
+
+html{
+    scroll-behavior: smooth;
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
-    background-color: rgb(221, 233, 233);
     overflow-x: hidden;
-    font-family: 'Roboto', sans-serif;
+    background-color: #f0f2f5;
+    
+    max-width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 .sections {
@@ -10,10 +20,8 @@ body{
 
 .leftBar23{
     height: 10000px;
-    width: 300px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin-top: -50px;
-    margin-left: -50px;
     position: fixed;
     
 }
@@ -26,8 +34,7 @@ body{
 }
 
 .rightBar23 {
-    height: 10000px;
-    width: 420px;
+    width: max-content;
     background-color: rgb(255, 255, 255);
     margin-top: -50px;
     position: fixed;
@@ -101,11 +108,9 @@ body{
 }
 
 .welcome-back {
-    background-color: rgba(109, 50, 204, 0.288);
+    background-color: rgba(67, 0, 175, 0.288);
     height: 200px;
-    margin-top: 50px;
-    width: 1100px;
-    margin-left: 290px;
+    margin-top: 20px;
     border-radius: 10px;
     Box-shadow:0 10px 20px #d6d6d6, 0 22px 32px rgba(71, 69, 69, 0.23); border-radius: 10px;
 
@@ -126,9 +131,9 @@ body{
 }
 
 .buisness-vector {
-    width: 400px;
-    margin-left: 600px;
-    margin-top: -230px;
+    width: 280px;
+    margin-right: 60px;
+    padding-top: -90px;
 }
 
 .chart1 {
@@ -230,6 +235,16 @@ body{
 
 .eventsli {
     margin-top: 30px;
+}
+
+.dashboardItem
+{
+    border-radius: 10px;
+}
+
+.dashboardItem:hover
+{
+    background-color: #e4e6eb;
 }
 
 @media only screen and (min-width: 768px) {
