fixed false calls

--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -55,7 +55,7 @@
 </head>
 
 
-<body onload=" getHackathonData(), getName()" id="body">
+<body id="body">
     <script src="/Js/auth.js"></script>
     < <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
