--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -328,7 +328,7 @@
                                                                     <i class="fa fa-calendar">
                                                                     </i>
                                                                 </div>
-                                                                <input class="form-control" id="date" name="date"
+                                                                <input class="form-control" name="date"
                                                                     placeholder="MM/DD/YYYY" type="text"
                                                                     id="dateStart" />
                                                             </div>
@@ -364,14 +364,14 @@
                                                                     <i class="fa fa-calendar">
                                                                     </i>
                                                                 </div>
-                                                                <input class="form-control" id="date" name="date"
+                                                                <input class="form-control"  name="date"
                                                                     placeholder="MM/DD/YYYY" type="text" id="dateEnd" />
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
                                                         <div class="col-sm-10 col-sm-offset-2">
-                                                            <button class="btn btn-primary " name="submit" type="submit"
+                                                            <button class="btn btn-primary "
                                                                 onclick="createHackathon()">
                                                                 Submit
                                                             </button>
