--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -103,6 +103,9 @@
                 _refCreateHackathon.child("Hackathon Name").set(hackName);
                 _refCreateHackathon.child("Role").set("Hoster");
                 _refCreateHackathon.child("Status").set("Inactive")
+                console.log(code);
+                console.log(hackStart);
+                console.log(hackName);
 
                 let toastOutput = ""
                 toastOutput += `
