--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -593,7 +593,7 @@
                             </div>
                         </div>
                         <div style="margin-top: 40px;"></div>
-                        <button class="btn btn-primary " name="submit" type="submit">
+                        <button class="btn btn-primary " name="submit" type="submit" onclick="createHackathon()">
                             Update
                         </button>
                 </div>
