--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -92,7 +92,7 @@
                 var hackLocation = document.getElementById("hackLocation").value;
                 var hackStart = document.getElementById("dateStart").value;
                 var hackEnd = document.getElementById("dateEnd").value;
-                var hackCreator = localStorage.get("email");
+                var hackCreator = localStorage.getItem("email");
                 console.log(hackCreator);
 
 
