padding grid fix

--- a/views/layouts/hackathonsContent.html
+++ b/views/layouts/hackathonsContent.html
@@ -197,6 +197,14 @@
 
 
         <div class="container">
+            <div class="toast">
+                <div class="toast-header">
+                  Toast Header
+                </div>
+                <div class="toast-body">
+                  Some text inside the toast body
+                </div>
+              </div>
             <div class="row">
                 <div class="col-md-3 sidebar">
                     <nav class="sidebar-nav">
@@ -367,7 +375,8 @@
                         <h3 class="hr-divider-content hr-divider-heading">Past Hackathons</h3>
                     </div>
 
-                    <div  id="upcommingHackathons" style="  display:inline-grid;">
+                    <div  id="upcommingHackathons" style="  display:inline-grid; grid-template-columns: auto auto auto;
+                    padding: 10px;">
                         
                     </div>
 
