--- a/views/layouts/hackathonsContent.html
+++ b/views/layouts/hackathonsContent.html
@@ -376,7 +376,7 @@
                     </div>
 
                     <div  id="upcommingHackathons" style="  display:inline-grid; grid-template-columns: auto auto auto;
-                    ">
+                    margin-left: -30px;">
                         
                     </div>
 
