--- a/views/login.html
+++ b/views/login.html
@@ -15,10 +15,8 @@
 
 	<!--===============================================================================================-->
 </head>
-<div id="anojs-night-sky" style="width: 100%; height: 100%;"></div>
-<body>
+<body style="background-color: #252830;">
 
-	<script src="http://anojs.com/files/anojs-night-sky.js?"></script>
 	<div class="limiter" style="position: absolute; top: 0;">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
