--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -95,6 +95,7 @@
                 var hackCreator = localStorage.getItem("email");
                 var bgImage = document.getElementById("imageInput").value;
                 console.log(hackCreator);
+                localStorage.setItem("current hackathon")
 
 
                 var _refCreateHackathon = firebase.database().ref().child("UserData").child(hackCreator).child("Hackathons").child(code);
@@ -108,6 +109,15 @@
                 console.log(code);
                 console.log(hackStart);
                 console.log(hackName);
+                var _refCreateHackathon2 = firebase.database().ref().child("Hackathons").child(code);
+                _refCreateHackathon2.child("Code").set(code);
+                _refCreateHackathon2.child("Date").set(hackStart);
+                _refCreateHackathon2.child("DateEnd").set(hackEnd);
+                _refCreateHackathon2.child("Hackathon Name").set(hackName);
+                _refCreateHackathon2.child("Role").set("Hoster");
+                _refCreateHackathon2.child("Status").set("Inactive")
+                _refCreateHackathon2.child("ImageURL").set(bgImage);
+
 
                 let toastOutput = ""
                 toastOutput += `
@@ -383,10 +393,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <div class="col-sm-10 col-sm-offset-2">
-                                                            <button class="btn btn-primary "
-                                                                onclick="createHackathon()">
-                                                                Submit
-                                                            </button>
+                                                            
                                                         </div>
                                                     </div>
                                                 </form>
