--- a/views/signup.html
+++ b/views/signup.html
@@ -16,7 +16,6 @@
     <!--===============================================================================================-->
 
 </head>
-<div id="anojs-night-sky" style="width: 100%; height: 100%;"></div>
 </a>
 <style>
     .material-icons:hover{
@@ -26,8 +25,7 @@
 </style>
 
 
-<body style="overflow: none;">
-    <script src="http://anojs.com/files/anojs-night-sky.js?"></script>
+<body style="overflow: none;background-color: #252830;" >
 
 
 
