--- a/views/layouts/createHackathon.html
+++ b/views/layouts/createHackathon.html
@@ -634,7 +634,7 @@
                             </div>
                         </div>
                         <div style="margin-top: 40px;"></div>
-                        <button class="btn btn-primary " name="submit" type="submit" onclick="createHackathon()">
+                        <button class="btn btn-primary " name="submit" type="submit" onclick="createHackathon(), myFunction()">
                             Update
                         </button>
                 </div>
